objects/MFG_Discrete_Partners_Risk_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Accurate_Data_and_Classification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accurate Data and Classification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalates_shortages_and_price_increases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalates shortages and price increases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_response_to_Put_out_fires__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast response to &quot;Put out fires&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_health_reviews_of_supply_base__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial health reviews of supply base</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_view_of_collection_systems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global view of collection systems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_performance_monitoring_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has performance monitoring available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_happy_are_you_with_service__c</fullName>
        <label>How happy are you with service?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Information_Shared_across_Supply_Chain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Information Shared across Supply Chain?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Major_risks_reviewed_regularly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major risks reviewed regularly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manages_complexity_in_supply_chain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manages complexity in supply chain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Risk_Score__c</fullName>
        <formula>100-
IF( Accurate_Data_and_Classification__c , 5, 0) -
IF( Global_view_of_collection_systems__c , 5, 0) -
IF( Processes_are_managed_proactively__c , 5, 0) -
IF( Sourcing_from_Single_Supplier_Facility__c , 5, 0) -
IF( Major_risks_reviewed_regularly__c , 5, 0) -
IF( Financial_health_reviews_of_supply_base__c , 5, 0) -
IF( Reviews_risks_around_costs_regularly__c , 5, 0) -
IF( Financial_health_reviews_of_supply_base__c , 5, 0) -
IF( Reviews_risks_around_costs_regularly__c , 5, 0) -
IF( Information_Shared_across_Supply_Chain__c , 5, 0) -
IF( Fast_response_to_Put_out_fires__c , 5, 0) -
IF( SOP_incl_Demand_Management_Reviewed__c , 5, 0) -
IF( Has_performance_monitoring_available__c , 5, 0) -
IF( Escalates_shortages_and_price_increases__c , 5, 0) -
IF( Seeks_weakest_links_in_Supply_Chain__c , 5, 0) -
IF( Manages_complexity_in_supply_chain__c , 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processes_are_managed_proactively__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processes are managed proactively</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviews_risks_around_costs_regularly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviews risks around costs regularly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOP_incl_Demand_Management_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>S&amp;OP incl Demand Management Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seeks_weakest_links_in_Supply_Chain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seeks weakest links in Supply Chain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sourcing_from_Single_Supplier_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sourcing from Single Supplier Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identify</fullName>
                </value>
                <value>
                    <fullName>Assess</fullName>
                </value>
                <value>
                    <fullName>Mitigate</fullName>
                </value>
                <value>
                    <fullName>Control Risks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Risk Assessments</relationshipLabel>
        <relationshipName>Risk_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What_is_the_quality_of_product__c</fullName>
        <label>What is the quality of product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_is_your_likelyhood_to_renew__c</fullName>
        <label>What is your likelyhood to renew?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Risk Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Accurate_Data_and_Classification__c</columns>
        <columns>Escalates_shortages_and_price_increases__c</columns>
        <columns>Fast_response_to_Put_out_fires__c</columns>
        <columns>Financial_health_reviews_of_supply_base__c</columns>
        <columns>Global_view_of_collection_systems__c</columns>
        <columns>Has_performance_monitoring_available__c</columns>
        <columns>How_happy_are_you_with_service__c</columns>
        <columns>Information_Shared_across_Supply_Chain__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Risk Assessment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>